refactor folders + add hw9

--- a/a2/data/Untitled.ipynb
+++ b/a2/data/Untitled.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "d7455f82",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "b7cbd343",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "{'Cultural', 'Mixed', 'Natural'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "30c8a0f6",
    "metadata": {},
    "outputs": [
@@ -472,7 +472,7 @@
        " 'Zimbabwe'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "edac816b",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
        " 'Latin America and the Caribbean'}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "b5986746",
    "metadata": {},
    "outputs": [],
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "e6af7555",
    "metadata": {},
    "outputs": [],
@@ -560,13 +560,421 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "55cca84c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/gk/dqh_8xfd1q73yqbmz4sjhrp40000gp/T/ipykernel_47483/2711697098.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m (pd.DataFrame.from_dict(data=region_lst, orient='index')\n\u001b[0m\u001b[1;32m      2\u001b[0m    .to_csv('region_count.csv', header=['count']))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "(pd.DataFrame.from_dict(data=region_lst, orient='index')\n",
     "   .to_csv('region_count.csv', header=['count']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "1ff36b1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Unnamed: 0  count\n",
+       "0  Afghanistan      2\n",
+       "1      Albania      4\n",
+       "2      Algeria      7\n",
+       "3      Andorra      1\n",
+       "4       Angola      1"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cc = pd.read_csv('country_count.csv')\n",
+    "cc.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "0cb219b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>alpha-2</th>\n",
+       "      <th>alpha-3</th>\n",
+       "      <th>country-code</th>\n",
+       "      <th>iso_3166-2</th>\n",
+       "      <th>region</th>\n",
+       "      <th>sub-region</th>\n",
+       "      <th>intermediate-region</th>\n",
+       "      <th>region-code</th>\n",
+       "      <th>sub-region-code</th>\n",
+       "      <th>intermediate-region-code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AF</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>4</td>\n",
+       "      <td>ISO 3166-2:AF</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Southern Asia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>142.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Åland Islands</td>\n",
+       "      <td>AX</td>\n",
+       "      <td>ALA</td>\n",
+       "      <td>248</td>\n",
+       "      <td>ISO 3166-2:AX</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Northern Europe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>154.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>ALB</td>\n",
+       "      <td>8</td>\n",
+       "      <td>ISO 3166-2:AL</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Southern Europe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>DZ</td>\n",
+       "      <td>DZA</td>\n",
+       "      <td>12</td>\n",
+       "      <td>ISO 3166-2:DZ</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Northern Africa</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>AS</td>\n",
+       "      <td>ASM</td>\n",
+       "      <td>16</td>\n",
+       "      <td>ISO 3166-2:AS</td>\n",
+       "      <td>Oceania</td>\n",
+       "      <td>Polynesia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             name alpha-2 alpha-3  country-code     iso_3166-2   region  \\\n",
+       "0     Afghanistan      AF     AFG             4  ISO 3166-2:AF     Asia   \n",
+       "1   Åland Islands      AX     ALA           248  ISO 3166-2:AX   Europe   \n",
+       "2         Albania      AL     ALB             8  ISO 3166-2:AL   Europe   \n",
+       "3         Algeria      DZ     DZA            12  ISO 3166-2:DZ   Africa   \n",
+       "4  American Samoa      AS     ASM            16  ISO 3166-2:AS  Oceania   \n",
+       "\n",
+       "        sub-region intermediate-region  region-code  sub-region-code  \\\n",
+       "0    Southern Asia                 NaN        142.0             34.0   \n",
+       "1  Northern Europe                 NaN        150.0            154.0   \n",
+       "2  Southern Europe                 NaN        150.0             39.0   \n",
+       "3  Northern Africa                 NaN          2.0             15.0   \n",
+       "4        Polynesia                 NaN          9.0             61.0   \n",
+       "\n",
+       "   intermediate-region-code  \n",
+       "0                       NaN  \n",
+       "1                       NaN  \n",
+       "2                       NaN  \n",
+       "3                       NaN  \n",
+       "4                       NaN  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cd = pd.read_csv('country_code.csv')\n",
+    "cd.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "1c953d52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>alpha-2</th>\n",
+       "      <th>alpha-3</th>\n",
+       "      <th>country-code</th>\n",
+       "      <th>iso_3166-2</th>\n",
+       "      <th>region</th>\n",
+       "      <th>sub-region</th>\n",
+       "      <th>intermediate-region</th>\n",
+       "      <th>region-code</th>\n",
+       "      <th>sub-region-code</th>\n",
+       "      <th>intermediate-region-code</th>\n",
+       "      <th>country_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AF</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>4</td>\n",
+       "      <td>ISO 3166-2:AF</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Southern Asia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>142.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Åland Islands</td>\n",
+       "      <td>AX</td>\n",
+       "      <td>ALA</td>\n",
+       "      <td>248</td>\n",
+       "      <td>ISO 3166-2:AX</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Northern Europe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>154.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>ALB</td>\n",
+       "      <td>8</td>\n",
+       "      <td>ISO 3166-2:AL</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Southern Europe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>DZ</td>\n",
+       "      <td>DZA</td>\n",
+       "      <td>12</td>\n",
+       "      <td>ISO 3166-2:DZ</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Northern Africa</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>American Samoa</td>\n",
+       "      <td>AS</td>\n",
+       "      <td>ASM</td>\n",
+       "      <td>16</td>\n",
+       "      <td>ISO 3166-2:AS</td>\n",
+       "      <td>Oceania</td>\n",
+       "      <td>Polynesia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             name alpha-2 alpha-3  country-code     iso_3166-2   region  \\\n",
+       "0     Afghanistan      AF     AFG             4  ISO 3166-2:AF     Asia   \n",
+       "1   Åland Islands      AX     ALA           248  ISO 3166-2:AX   Europe   \n",
+       "2         Albania      AL     ALB             8  ISO 3166-2:AL   Europe   \n",
+       "3         Algeria      DZ     DZA            12  ISO 3166-2:DZ   Africa   \n",
+       "4  American Samoa      AS     ASM            16  ISO 3166-2:AS  Oceania   \n",
+       "\n",
+       "        sub-region intermediate-region  region-code  sub-region-code  \\\n",
+       "0    Southern Asia                 NaN        142.0             34.0   \n",
+       "1  Northern Europe                 NaN        150.0            154.0   \n",
+       "2  Southern Europe                 NaN        150.0             39.0   \n",
+       "3  Northern Africa                 NaN          2.0             15.0   \n",
+       "4        Polynesia                 NaN          9.0             61.0   \n",
+       "\n",
+       "   intermediate-region-code country_count  \n",
+       "0                       NaN             2  \n",
+       "1                       NaN           NaN  \n",
+       "2                       NaN             4  \n",
+       "3                       NaN             7  \n",
+       "4                       NaN           NaN  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for index, row in cd.iterrows():\n",
+    "    index_cc = list(cc[cc['Unnamed: 0']==row['name']].index.values)\n",
+    "    if index_cc:\n",
+    "        index_cc = index_cc[0]\n",
+    "        cd.loc[index, 'country_count'] = str(cc.loc[index_cc, 'count'])\n",
+    "cd.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "3b58e9c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd.to_csv('country_count_2.csv', index=False)"
    ]
   }
  ],
